[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linref"
version = "1.0.0"
description = "Linearly referenced data management, manipulation, and operations"
requires-python = ">=3.10"
license = {file = "LICENSE.rst"}
keywords=["python", "geospatial", "linear", "data", "event", "dissolve", "overlay", "range", "numeric", "interval"]
authors = [
    {name = "Tariq Shihadah", email = "tariq.shihadah@gmail.com"}
]
dependencies = [
    "numpy>=2.1",
    "scipy>=1.13",
    "shapely>=2.0",
    "pandas>=2.0",
    "geopandas>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["readme"]

[project.urls]
documentation = "https://linref.readthedocs.io/"
repository = "https://github.com/tariqshihadah/linref"

[tool.setuptools.packages.find]
include = ["linref", "linref.*"]
exclude = ["linref.tests", "linref.tests.*"]

[tool.setuptools.package-data]
"linref" = ["py.typed"]
"linref.datasets" = ["_data/*"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
